Gestion login/register avec email

--- a/src/main/resources/mails/activationEmail.html
+++ b/src/main/resources/mails/activationEmail.html
@@ -5,15 +5,15 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
-        <p th:text="#{email.activation.greeting(${user.login})}">
-            Dear
+        <p th:text="#{email.activation.greeting}">
+            Hello,
         </p>
         <p th:text="#{email.activation.text1}">
             Your JHipster account has been created, please click on the URL below to activate it:
         </p>
         <p>
             <a th:href="@{|${baseUrl}/#/activate?key=${user.activationKey}|}"
-               th:text="|${user.login}|">Activation Link</a>
+               th:text="#{email.activation.link}">Activate your account</a>
         </p>
         <p>
             <span th:text="#{email.activation.text2}">Regards, </span>
