--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,10 +24,7 @@
         <div ui-view="navbar" ng-cloak=""></div>
         <div class="container">
             <div class="well" ui-view="content"></div>
-
-            <div class="footer">
-                <p translate="footer">This is your footer</p>
-            </div>
+            <div class="footer"></div>
         </div>
 
         <!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
