ajout entite demande

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,7 +1,7 @@
 <div ng-cloak>
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-lg-4" ng-click="count = count + 1" ng-init="count=0">
-            <div class="box">
+            <div class="box" ng-click="goTo('demande')">
                 <div class="icon">
                     <div class="image"><span class="glyphicon glyphicon-education btn-lg white"></span></div>
                     <div class="info">
@@ -60,7 +60,7 @@
                 <div class="icon">
                     <div class="image"><span class="glyphicon glyphicon-folder-open btn-lg white"></span></div>
                     <div class="info">
-                        <p translate="main.title.study">I want to <strong>follow</strong> my request</p>
+                        <p translate="main.title.follow">I want to <strong>follow</strong> my request</p>
                     </div>
                 </div>
                 <div class="space"></div>
