--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -139,6 +139,11 @@
     <script src="scripts/components/auth/provider/auth.session.service.js"></script>
     <script src="scripts/app/account/sessions/sessions.js"></script>
     <script src="scripts/app/account/sessions/sessions.controller.js"></script>
+    <script src="scripts/app/entities/demande/demande.js"></script>
+    <script src="scripts/app/entities/demande/demande.controller.js"></script>
+    <script src="scripts/app/entities/demande/demande-dialog.controller.js"></script>
+    <script src="scripts/app/entities/demande/demande-detail.controller.js"></script>
+    <script src="scripts/components/entities/demande/demande.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
