page demande etude - campus france

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -139,6 +139,9 @@
     <script src="scripts/components/auth/provider/auth.session.service.js"></script>
     <script src="scripts/app/account/sessions/sessions.js"></script>
     <script src="scripts/app/account/sessions/sessions.controller.js"></script>
+    <script src="scripts/app/demandes/etudier/etudier.js"></script>
+    <script src="scripts/app/demandes/demandes.js"></script>
+    <script src="scripts/app/demandes/etudier/etudier.controller.js"></script>
     <script src="scripts/app/entities/demande/demande.js"></script>
     <script src="scripts/app/entities/demande/demande.controller.js"></script>
     <script src="scripts/app/entities/demande/demande-dialog.controller.js"></script>
