--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,7 +1,7 @@
 <div ng-cloak>
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-lg-4" ng-click="count = count + 1" ng-init="count=0">
-            <div class="box" ng-click="goTo('demande')">
+            <div class="box" ng-click="goTo('etudier')">
                 <div class="icon">
                     <div class="image"><span class="glyphicon glyphicon-education btn-lg white"></span></div>
                     <div class="info">
