--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,70 +1,10 @@
 <div ng-cloak>
     <div class="row">
-        <div class="col-xs-12 col-sm-6 col-lg-4" ng-click="count = count + 1" ng-init="count=0">
-            <div class="box" ng-click="goTo('etudier')">
-                <div class="icon">
-                    <div class="image"><span class="glyphicon glyphicon-education btn-lg white"></span></div>
-                    <div class="info">
-                        <p translate="main.title.study">I want to <strong>study</strong> in France</p>
-                    </div>
-                </div>
-                <div class="space"></div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-4">
-            <div class="box">
-                <div class="icon">
-                    <div class="image"><span class="glyphicon glyphicon-briefcase btn-lg white"></span></div>
-                    <div class="info">
-                        <p translate="main.title.work">I want to <strong>work</strong> in France</p>
-                    </div>
-                </div>
-                <div class="space"></div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-4">
-            <div class="box">
-                <div class="icon">
-                    <div class="image"><span class="glyphicon glyphicon-home btn-lg white"></span></div>
-                    <div class="info">
-                        <p translate="main.title.family">I want to <strong>get my family</strong> in France</p>
-                    </div>
-                </div>
-                <div class="space"></div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-4">
-            <div class="box">
-                <div class="icon">
-                    <div class="image"><span class="glyphicon glyphicon-repeat btn-lg white"></span></div>
-                    <div class="info">
-                        <p translate="main.title.extend">I want to <strong>extend my stay</strong> in France</p>
-                    </div>
-                </div>
-                <div class="space"></div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-4">
-            <div class="box">
-                <div class="icon">
-                    <div class="image"><span class="glyphicon glyphicon-user btn-lg white"></span></div>
-                    <div class="info">
-                        <p translate="main.title.user.account">I want to <strong>manage my personal account</strong></p>
-                    </div>
-                </div>
-                <div class="space"></div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-4">
-            <div class="box">
-                <div class="icon">
-                    <div class="image"><span class="glyphicon glyphicon-folder-open btn-lg white"></span></div>
-                    <div class="info">
-                        <p translate="main.title.follow">I want to <strong>follow</strong> my request</p>
-                    </div>
-                </div>
-                <div class="space"></div>
-            </div>
-        </div>
+        <box-menu boxtitle="main.title.study" boxlogo="education" ng-click="goTo('etudier')"></box-menu>
+        <box-menu boxtitle="main.title.work" boxlogo="briefcase"></box-menu>
+        <box-menu boxtitle="main.title.family" boxlogo="home"></box-menu>
+        <box-menu boxtitle="main.title.extend" boxlogo="repeat"></box-menu>
+        <box-menu boxtitle="main.title.user.account" boxlogo="user"></box-menu>
+        <box-menu boxtitle="main.title.follow" boxlogo="folder-open"></box-menu>
     </div>
 </div>
