création page paiement

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,7 @@
         <!-- build:css assets/styles/main.css -->
         <link rel="stylesheet" href="assets/styles/main.css">
         <link rel="stylesheet" href="assets/styles/etudier.css">
+        <link rel="stylesheet" href="assets/styles/payment.css">
         <!-- endbuild -->
     </head>
     <body ng-app="sejourApp">
@@ -157,6 +158,8 @@
     <script src="scripts/app/demandes/etudier/address/address.controller.js"></script>
     <script src="scripts/app/demandes/etudier/project/project.js"></script>
     <script src="scripts/app/demandes/etudier/project/project.controller.js"></script>
+    <script src="scripts/app/demandes/etudier/payment/payment.js"></script>
+    <script src="scripts/app/demandes/etudier/payment/payment.controller.js"></script>
     <script src="scripts/components/demandes/demande.service.js"></script>
     <!-- endbuild -->
 </body>
