creation page summary

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -160,6 +160,8 @@
     <script src="scripts/app/demandes/etudier/project/project.controller.js"></script>
     <script src="scripts/app/demandes/etudier/payment/payment.js"></script>
     <script src="scripts/app/demandes/etudier/payment/payment.controller.js"></script>
+    <script src="scripts/app/demandes/etudier/summary/summary.js"></script>
+    <script src="scripts/app/demandes/etudier/summary/summary.controller.js"></script>
     <script src="scripts/components/demandes/demande.service.js"></script>
     <!-- endbuild -->
 </body>
