--- a/src/main/webapp/scripts/app/demandes/etudier/payment/payment.html
+++ b/src/main/webapp/scripts/app/demandes/etudier/payment/payment.html
@@ -71,11 +71,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row btn-row">
-                            <div class="col-xs-12">
-                                <button type="submit" ng-disabled="paymentForm.$invalid || paymentForm.$submitted" class="btn btn-fun"
-	        							translate="etudier.button.payment">Payment</button>
-                            </div>
+                        <div class="row row-center">
+	                        <button type="submit" ng-disabled="paymentForm.$invalid || paymentForm.$submitted" class="btn btn-fun"
+	 							translate="etudier.button.payment">Payment</button>
                         </div>
                         <div class="row" style="display:none;">
                             <div class="col-xs-12">
