--- a/src/main/webapp/scripts/app/demandes/etudier/summary/summary.html
+++ b/src/main/webapp/scripts/app/demandes/etudier/summary/summary.html
@@ -1,36 +1,67 @@
 <div ng-cloak>
+    <div class="row">
+    	<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
+    		<p translate="etudier.title">Request for a student stay</p>
+   		</div>
+    </div>
+    <br>
+    <steps-menu stepnumber="-1"></steps-menu>
+    <br><br>
 
 	<div class="row row-center">
-		<div class="panel panel-success">
-			<div class="panel-heading"><span translate="etudier.summary.success">Success</span></div>
+		<div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+			<div class="panel panel-success">
+				<div class="panel-heading"><p translate="etudier.summary.success">Success</p></div>
+			</div>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+			<p translate="etudier.summary.text1">Text1</p>
 		</div>
 	</div>
 	<div class="row">
-		<span translate="etudier.summary.text1">Text1</span>
+		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+			<p translate="etudier.summary.text2">Text2</p>
+		</div>
 	</div>
 	<div class="row">
-		<span translate="etudier.summary.text2">Text2</span>
-	</div>
-	<div class="row">
-		<span translate="etudier.summary.text3">Text3</span>
-	</div>
-	<br>
-	<div class="row">
-		<span translate="etudier.summary.text4">Text4</span>
+		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+			<p translate="etudier.summary.text3">Text3</p>
+		</div>
 	</div>
 	<br>
 	<div class="row">
-		<span translate="etudier.summary.text5">Text5</span>
+		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+			<p translate="etudier.summary.text4">Text4</p>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+			<p translate="etudier.summary.text5">Text5</p>
+		</div>
 	</div>
 	<div class="row">
-		<span translate="etudier.summary.text6">Text6</span>
+		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+			<p translate="etudier.summary.text6">Text6</p>
+		</div>
 	</div>
 	<div class="row">
-		<span translate="etudier.summary.text7">Text7</span>
+		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+			<p translate="etudier.summary.text7">Text7</p>
+		</div>
 	</div>
 	<br>
 	<div class="row row-center">
-    	<button class="btn btn-fun" ui-sref="home"
-				translate="etudier.button.end">End</button>
+		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+	    	<button class="btn btn-fun" ui-sref="home"
+					translate="etudier.button.end">End</button>
+		</div>
 	</div>
 </div>
+    
+<script type="text/javascript">
+	$("html, body").animate({ scrollTop: 0 }, "slow");
+</script>
