--- a/src/main/webapp/scripts/app/demandes/etudier/address/address.html
+++ b/src/main/webapp/scripts/app/demandes/etudier/address/address.html
@@ -1,11 +1,28 @@
 <div ng-cloak>
+    <div class="row">
+    	<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
+    		<p translate="etudier.title">Request for a student stay</p>
+   		</div>
+    </div>
+    <br>
+    <steps-menu stepnumber="2"></steps-menu>
+    <br><br>
 
 	<form name="addressForm" role="form" class="form-horizontal" novalidate ng-submit="save()" show-validation>
 	
 		<div class="row">
-			<h2><span translate="etudier.address.form.title">Address</span></h2>
-	    
-			<div class="col-md-8">
+			<div class="col-xs-1 col-xs-offset-1 col-sm-1 col-sm-offset-1 col-md-1 col-md-offset-1 col-lg-1 col-lg-offset-1">
+		    	<span class="step-number-align">
+		    		<div class="step-number step-number-green">2</div>
+		    	</span>
+		    </div>
+		    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 form-title-text">
+		    	<p translate="etudier.address.form.title">Address</p>
+		    </div>
+		</div>
+		<br>
+	    <div class="row">
+			<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
 		        <div class="form-group">
 		            <label translate="etudier.address.form.owner" for="field_owner">Owner</label>
 		            <input type="text" class="form-control" name="owner" id="field_owner"
@@ -116,12 +133,17 @@
 		        </div>
 		    </div>
 		</div>
-	    <div class="row">
-	    	<div class="col-md-8">
+		<br>
+	    <div class="row row-center">
+	    	<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
 	        	<button class="btn btn-fun" translate="etudier.button.back" ui-sref="identity">Back</button>
 	        	<button type="submit" ng-disabled="addressForm.$invalid || addressForm.$submitted" class="btn btn-fun"
 	        		translate="etudier.button.continue">Continue</button>
-        	</div>
+       		</div>
         </div>
 	</form>
 </div>
+    
+<script type="text/javascript">
+	$("html, body").animate({ scrollTop: 0 }, "slow");
+</script>
