--- a/src/main/webapp/scripts/app/demandes/etudier/etudier.html
+++ b/src/main/webapp/scripts/app/demandes/etudier/etudier.html
@@ -1,64 +1,60 @@
 <div ng-cloak>
 	<div class="row">
-    	<div class="col-md-8">
+    	<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
     		<p translate="etudier.title">Request for a student stay</p>
-    	</div>
+   		</div>
     </div>
+    <br>
+    <steps-menu stepnumber="0"></steps-menu>
+    <br><br>
     <div class="row">
-    	<div class="col-md-8">
-    		<steps-menu></steps-menu>
-	    </div>
-    </div>
-    <!--
-    <div class="row">
-    	<div class="col-md-8">
+    	<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
     		<h3 translate="etudier.information.subtitle">4 steps for your request</h3>
     	</div>
    	</div>
-   	
-	<div class="row">
-    	<div class="col-md-3 steps-list">
-	        <div class="box">
-	            <div class="icon">
-	                <div class="number">
-	                	<span class="btn-lg white">1</span>
-	                </div>
-	            </div>
-	        </div>
+   	<br><br>
+    <div class="row">
+	    <div class="col-sm-offset-1 col-sm-1 col-xs-1">
+	    	<span class="step-number-align">
+	    		<div class="step-number step-number-green">1</div>
+	    	</span>
+	    </div>
+	    <div class="col-sm-10 col-xs-10 step-text">
+	    	<p translate="etudier.identity.form.title">Identity</p>
 	    </div>
 	</div>
-	<div class="row">
-    	<div class="col-md-3 steps-list">
-	        <div class="box">
-	            <div class="icon">
-	                <div class="number"><span class="btn-lg white">2</span></div>
-	            </div>
-	        </div>
+    <div class="row">
+	    <div class="col-sm-offset-1 col-sm-1 col-xs-1">
+	    	<span class="step-number-align">
+	    		<div class="step-number step-number-green">2</div>
+	    	</span>
+	    </div>
+	    <div class="col-sm-10 col-xs-10 step-text">
+	    	<p translate="etudier.address.form.title">Address</p>
 	    </div>
 	</div>
-	<div class="row">
-    	<div class="col-md-3 steps-list">
-	        <div class="box">
-	            <div class="icon">
-	                <div class="number"><span class="btn-lg white">3</span></div>
-	            </div>
-	        </div>
+    <div class="row">
+	    <div class="col-sm-offset-1 col-sm-1 col-xs-1">
+	    	<span class="step-number-align">
+	    		<div class="step-number step-number-green">3</div>
+	    	</span>
+	    </div>
+	    <div class="col-sm-10 col-xs-10 step-text">
+	    	<p translate="etudier.project.form.title">Project</p>
 	    </div>
 	</div>
-	<div class="row">
-    	<div class="col-md-3 steps-list">
-	        <div class="box">
-	            <div class="icon">
-	                <div class="number"><span class="btn-lg white">4</span></div>
-	            </div>
-	        </div>
+    <div class="row">
+	    <div class="col-sm-offset-1 col-sm-1 col-xs-1">
+	    	<span class="step-number-align">
+	    		<div class="step-number step-number-green">4</div>
+	    	</span>
 	    </div>
-	</div>-->
-	
+	    <div class="col-sm-10 col-xs-10 step-text">
+	    	<p translate="etudier.payment.form.title">Payment</p>
+	    </div>
+	</div>
 	<br><br>
-	<div class="row">
-    	<div class="col-md-8">
-        	<button class="btn btn-fun" translate="etudier.button.start" ng-click="initRequest()">Start</button>
-	    </div>
+	<div class="row row-center">
+    	<button class="btn btn-fun" translate="etudier.button.start" ng-click="initRequest()">Start</button>
 	</div>
 </div>
