--- a/src/main/webapp/scripts/app/demandes/etudier/payment/payment.html
+++ b/src/main/webapp/scripts/app/demandes/etudier/payment/payment.html
@@ -1,87 +1,108 @@
 <div ng-cloak>
+    <div class="row">
+    	<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
+    		<p translate="etudier.title">Request for a student stay</p>
+   		</div>
+    </div>
+    <br>
+    <steps-menu stepnumber="4"></steps-menu>
+    <br><br>
 
-	<div class="col-xs-12">
-	
-        	<h2><span translate="etudier.payment.form.title">Payment</span></h2>
-        	
-            <!-- CREDIT CARD FORM STARTS HERE -->
-            <div class="panel panel-default credit-card-box">
-                <div class="panel-heading" >
-                    <div class="row display-tr" >
-                        <div class="display-td" >                            
-                            <img class="img-responsive pull-right" src="assets/images/ogone_payment.png">
-                        </div>
-                    </div>                    
-                </div>
-                <div class="panel-body">
-                    <form role="form" id="paymentForm" novalidate ng-submit="save()" show-validation>
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <div class="form-group">
-                                    <label for="cardOwner" translate="etudier.payment.form.cardOwner">CARD OWNER</label>
-                                    <input type="text" class="form-control" name="cardOwner" ng-model="payment.cardOwner" required autofocus />
-                                </div>
-                            </div>                        
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <div class="form-group">
-                                    <label for="cardNumber" translate="etudier.payment.form.cardNumber">CARD NUMBER</label>
-                                    <div class="input-group">
-                                        <span class="input-group-addon"><i class="fa fa-credit-card"></i></span>
-                                        <input 
-                                            type="tel"
-                                            class="form-control"
-                                            name="cardNumber"
-                                            ng-model="payment.cardNumber"
-                                            autocomplete="cc-number"
-                                            required 
-                                        />
-                                    </div>
-                                </div>                            
+	<div class="row">
+		<div class="col-xs-1 col-xs-offset-1 col-sm-1 col-sm-offset-1 col-md-1 col-md-offset-1 col-lg-1 col-lg-offset-1">
+	    	<span class="step-number-align">
+	    		<div class="step-number step-number-green">4</div>
+	    	</span>
+	    </div>
+	    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 form-title-text">
+	    	<p translate="etudier.payment.form.title">Payment</p>
+	    </div>
+	</div>
+	<br>
+	<div class="row">
+        <!-- CREDIT CARD FORM STARTS HERE -->
+        <div class="panel panel-default credit-card-box">
+            <div class="panel-heading" >
+                <div class="row display-tr" >
+                    <div class="display-td" >                            
+                        <img class="img-responsive pull-right" src="assets/images/ogone_payment.png">
+                    </div>
+                </div>                    
+            </div>
+            <div class="panel-body">
+                <form role="form" id="paymentForm" novalidate ng-submit="save()" show-validation>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="form-group">
+                                <label for="cardOwner" translate="etudier.payment.form.cardOwner">CARD OWNER</label>
+                                <input type="text" class="form-control" name="cardOwner" ng-model="payment.cardOwner" required autofocus />
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-6 col-md-6">
-                                <div class="form-group">
-                                    <label for="cardExpiry" translate="etudier.payment.form.cardExpiringDate">EXPIRATION DATE</label>
+                        </div>                        
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="form-group">
+                                <label for="cardNumber" translate="etudier.payment.form.cardNumber">CARD NUMBER</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-credit-card"></i></span>
                                     <input 
-                                        type="tel" 
-                                        class="form-control" 
-                                        name="cardExpiry"
-                                        ng-model="payment.cardExpiringDate"
-                                        placeholder="MM / YY"
-                                        autocomplete="cc-exp"
+                                        type="tel"
+                                        class="form-control"
+                                        name="cardNumber"
+                                        ng-model="payment.cardNumber"
+                                        autocomplete="cc-number"
                                         required 
                                     />
                                 </div>
-                            </div>
-                            <div class="col-xs-6 col-md-6 pull-right">
-                                <div class="form-group">
-                                    <label for="cardCVC" translate="etudier.payment.form.cardCV">CV CODE</label>
-                                    <input 
-                                        type="tel" 
-                                        class="form-control"
-                                        name="cardCVC"
-                                        ng-model="payment.cardCV"
-                                        placeholder="CVC"
-                                        autocomplete="cc-csc"
-                                        required
-                                    />
-                                </div>
-                            </div>
+                            </div>                            
                         </div>
-                        <div class="row row-center">
-	                        <button type="submit" ng-disabled="paymentForm.$invalid || paymentForm.$submitted" class="btn btn-fun"
-	 							translate="etudier.button.payment">Payment</button>
-                        </div>
-                        <div class="row" style="display:none;">
-                            <div class="col-xs-12">
-                                <p class="payment-errors"></p>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6 col-md-6">
+                            <div class="form-group">
+                                <label for="cardExpiry" translate="etudier.payment.form.cardExpiringDate">EXPIRATION DATE</label>
+                                <input 
+                                    type="tel" 
+                                    class="form-control" 
+                                    name="cardExpiry"
+                                    ng-model="payment.cardExpiringDate"
+                                    placeholder="MM / YY"
+                                    autocomplete="cc-exp"
+                                    required 
+                                />
                             </div>
                         </div>
-                    </form>
-                </div>
+                        <div class="col-xs-6 col-md-6 pull-right">
+                            <div class="form-group">
+                                <label for="cardCVC" translate="etudier.payment.form.cardCV">CV CODE</label>
+                                <input 
+                                    type="tel" 
+                                    class="form-control"
+                                    name="cardCVC"
+                                    ng-model="payment.cardCV"
+                                    placeholder="CVC"
+                                    autocomplete="cc-csc"
+                                    required
+                                />
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row row-center">
+                     <button type="submit" ng-disabled="paymentForm.$invalid || paymentForm.$submitted" class="btn btn-fun"
+					translate="etudier.button.payment">Payment</button>
+                    </div>
+                    <div class="row" style="display:none;">
+                        <div class="col-xs-12">
+                            <p class="payment-errors"></p>
+                        </div>
+                    </div>
+                </form>
             </div>
-        </div>       
+        </div>
+    </div>       
 </div>
+    
+<script type="text/javascript">
+	$("html, body").animate({ scrollTop: 0 }, "slow");
+</script>
