amélioration navbar + texte etudier

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,7 +26,7 @@
         <![endif]-->
         <div ng-show="{{ENV === 'dev'}}" class="development" ng-cloak=""></div>
         <div ui-view="navbar" ng-cloak=""></div>
-        <div class="container-fluid">
+        <div class="container">
             <div class="customwell" ui-view="content"></div>
             <div class="footer"></div>
         </div>
