--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -4,7 +4,7 @@
         <box-menu boxtitle="main.title.work" boxlogo="briefcase"></box-menu>
         <box-menu boxtitle="main.title.family" boxlogo="home"></box-menu>
         <box-menu boxtitle="main.title.extend" boxlogo="repeat"></box-menu>
-        <box-menu boxtitle="main.title.user.account" boxlogo="user"></box-menu>
+        <box-menu boxtitle="main.title.user.account" boxlogo="cog"></box-menu>
         <box-menu boxtitle="main.title.follow" boxlogo="folder-open"></box-menu>
     </div>
 </div>
