--- a/src/main/webapp/scripts/app/demandes/etudier/etudier.html
+++ b/src/main/webapp/scripts/app/demandes/etudier/etudier.html
@@ -14,46 +14,59 @@
    	</div>
    	<br><br>
     <div class="row">
-	    <div class="col-sm-offset-1 col-sm-1 col-xs-1">
+	    <div class="col-xs-1 col-sm-1 col-sm-offset-1">
 	    	<span class="step-number-align">
 	    		<div class="step-number step-number-green">1</div>
 	    	</span>
 	    </div>
-	    <div class="col-sm-10 col-xs-10 step-text">
+	    <div class="col-xs-10 col-sm-10 step-text">
 	    	<p translate="etudier.identity.form.title">Identity</p>
 	    </div>
 	</div>
     <div class="row">
-	    <div class="col-sm-offset-1 col-sm-1 col-xs-1">
+	    <div class="col-xs-1 col-sm-1 col-sm-offset-1">
 	    	<span class="step-number-align">
 	    		<div class="step-number step-number-green">2</div>
 	    	</span>
 	    </div>
-	    <div class="col-sm-10 col-xs-10 step-text">
+	    <div class="col-xs-10 col-sm-10 step-text">
 	    	<p translate="etudier.address.form.title">Address</p>
 	    </div>
 	</div>
     <div class="row">
-	    <div class="col-sm-offset-1 col-sm-1 col-xs-1">
+	    <div class="col-xs-1 col-sm-1 col-sm-offset-1">
 	    	<span class="step-number-align">
 	    		<div class="step-number step-number-green">3</div>
 	    	</span>
 	    </div>
-	    <div class="col-sm-10 col-xs-10 step-text">
+	    <div class="col-xs-10 col-sm-10 step-text">
 	    	<p translate="etudier.project.form.title">Project</p>
 	    </div>
 	</div>
     <div class="row">
-	    <div class="col-sm-offset-1 col-sm-1 col-xs-1">
+	    <div class="col-xs-1 col-sm-1 col-sm-offset-1">
 	    	<span class="step-number-align">
 	    		<div class="step-number step-number-green">4</div>
 	    	</span>
 	    </div>
-	    <div class="col-sm-10 col-xs-10 step-text">
+	    <div class="col-xs-10 col-sm-10 step-text">
 	    	<p translate="etudier.payment.form.title">Payment</p>
 	    </div>
 	</div>
-	<br><br>
+	<br>
+    <div class="row">
+    	<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 well">
+    		<p>Pour pouvoir compléter votre dépôt de demande, vous devez impérativement être en possession :</p>
+			<ul>
+				<li>d'un passeport valide,</li>
+				<li>d'un extrait de votre acte de naissance avec filiation ou d'une copie intégrale de votre acte de naissance,</li>
+				<li>d'un certificat d’inscription ou pré-inscription dans un établissement d'enseignement français,</li>
+				<li>de justificatifs de ressources financières suffisantes, soit supérieures ou égales à 615 € mensuels (attestation de bourse, attestation bancaire, fiches de paye ou attestation de prise en charge par un garant).</li>
+			</ul>
+			<p>Tous les justificatifs doivent être accompagnés, le cas échéant, de leur traduction en français par un traducteur interprète agréé près une cour d’appel.</p>
+			<p>Vous devrez apporter les originaux de ces documents lors du rendez-vous.</p>
+    	</div>
+	</div>
 	<div class="row row-center">
     	<button class="btn btn-fun" translate="etudier.button.start" ng-click="initRequest()">Start</button>
 	</div>
