--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -162,6 +162,8 @@
     <script src="scripts/app/demandes/etudier/payment/payment.controller.js"></script>
     <script src="scripts/app/demandes/etudier/summary/summary.js"></script>
     <script src="scripts/app/demandes/etudier/summary/summary.controller.js"></script>
+    <script src="scripts/app/demandes/etudier/validation/validation.js"></script>
+    <script src="scripts/app/demandes/etudier/validation/validation.controller.js"></script>
     <script src="scripts/components/demandes/demande.service.js"></script>
     <!-- endbuild -->
 </body>
