--- a/src/main/webapp/scripts/app/demandes/etudier/address/address.html
+++ b/src/main/webapp/scripts/app/demandes/etudier/address/address.html
@@ -1,7 +1,7 @@
 <div ng-cloak>
     <div class="row">
-    	<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
-    		<p translate="etudier.title">Request for a student stay</p>
+    	<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1 title-underscore">
+    		<h4 translate="etudier.title">Request for a student stay</h4>
    		</div>
     </div>
     <br>
