--- a/src/main/webapp/scripts/app/demandes/etudier/project/project.html
+++ b/src/main/webapp/scripts/app/demandes/etudier/project/project.html
@@ -1,7 +1,7 @@
 <div ng-cloak>
     <div class="row">
-    	<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
-    		<p translate="etudier.title">Request for a student stay</p>
+    	<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1 title-underscore">
+    		<h4 translate="etudier.title">Request for a student stay</h4>
    		</div>
     </div>
     <br>
@@ -158,6 +158,7 @@
 				        <input type="text" class="form-control" name="resourceProof" id="field_resourceProof" readonly="readonly"
 				                ng-model="project.resourceProof" placeholder="{{'etudier.project.form.resourceProof.placeholder' | translate}}" 
 				                required >
+				         
 					</div>
 							
 			        <div ng-show="projectForm.resourceProof.$dirty && projectForm.resourceProof.$invalid">
