creation page accueil agent + correction navbar

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -149,21 +149,24 @@
     <script src="scripts/components/auth/provider/auth.session.service.js"></script>
     <script src="scripts/app/account/sessions/sessions.js"></script>
     <script src="scripts/app/account/sessions/sessions.controller.js"></script>
-    <script src="scripts/app/demandes/demandes.js"></script>
-    <script src="scripts/app/demandes/etudier/etudier.js"></script>
-    <script src="scripts/app/demandes/etudier/etudier.controller.js"></script>
-    <script src="scripts/app/demandes/etudier/identity/identity.js"></script>
-    <script src="scripts/app/demandes/etudier/identity/identity.controller.js"></script>
-    <script src="scripts/app/demandes/etudier/address/address.js"></script>
-    <script src="scripts/app/demandes/etudier/address/address.controller.js"></script>
-    <script src="scripts/app/demandes/etudier/project/project.js"></script>
-    <script src="scripts/app/demandes/etudier/project/project.controller.js"></script>
-    <script src="scripts/app/demandes/etudier/payment/payment.js"></script>
-    <script src="scripts/app/demandes/etudier/payment/payment.controller.js"></script>
-    <script src="scripts/app/demandes/etudier/summary/summary.js"></script>
-    <script src="scripts/app/demandes/etudier/summary/summary.controller.js"></script>
-    <script src="scripts/app/demandes/etudier/validation/validation.js"></script>
-    <script src="scripts/app/demandes/etudier/validation/validation.controller.js"></script>
+    <script src="scripts/app/usager/usager.js"></script>
+    <script src="scripts/app/usager/etudier/etudier.js"></script>
+    <script src="scripts/app/usager/etudier/etudier.controller.js"></script>
+    <script src="scripts/app/usager/etudier/identity/identity.js"></script>
+    <script src="scripts/app/usager/etudier/identity/identity.controller.js"></script>
+    <script src="scripts/app/usager/etudier/address/address.js"></script>
+    <script src="scripts/app/usager/etudier/address/address.controller.js"></script>
+    <script src="scripts/app/usager/etudier/project/project.js"></script>
+    <script src="scripts/app/usager/etudier/project/project.controller.js"></script>
+    <script src="scripts/app/usager/etudier/payment/payment.js"></script>
+    <script src="scripts/app/usager/etudier/payment/payment.controller.js"></script>
+    <script src="scripts/app/usager/etudier/summary/summary.js"></script>
+    <script src="scripts/app/usager/etudier/summary/summary.controller.js"></script>
+    <script src="scripts/app/agent/agent.js"></script>
+    <script src="scripts/app/agent/etudier/etudier.js"></script>
+    <script src="scripts/app/agent/etudier/etudier.controller.js"></script>
+    <script src="scripts/app/agent/etudier/validation/validation.js"></script>
+    <script src="scripts/app/agent/etudier/validation/validation.controller.js"></script>
     <script src="scripts/components/demandes/demande.service.js"></script>
     <!-- endbuild -->
 </body>
