--- a/src/main/webapp/scripts/app/account/login/login.html
+++ b/src/main/webapp/scripts/app/account/login/login.html
@@ -8,7 +8,7 @@
             </div>
             <form class="form" role="form" ng-submit="login($event)">
                 <div class="form-group">
-                    <label for="username" translate="global.form.username">Login</label>
+                    <label for="username" translate="global.form.email">Login</label>
                     <input type="text" class="form-control" id="username" placeholder="{{'global.form.username.placeholder' | translate}}" ng-model="username">
                 </div>
                 <div class="form-group">
