--- a/src/main/webapp/scripts/app/agent/etudier/validation/validation.html
+++ b/src/main/webapp/scripts/app/agent/etudier/validation/validation.html
@@ -99,7 +99,7 @@
 			</div>
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<img src="assets/images/checkbox_unchecked.png" class="img-checkbox disabled">
+			<img src="assets/images/checkbox_unchecked.png" class="img-checkbox img-disabled">
 			<span>Pas d'historique</span>
 		</div>
 	</div>
