--- a/src/main/webapp/scripts/app/usager/etudier/address/address.html
+++ b/src/main/webapp/scripts/app/usager/etudier/address/address.html
@@ -136,7 +136,7 @@
 		<br>
 	    <div class="row row-center">
 	    	<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
-	        	<button class="btn btn-fun" translate="etudier.button.back" ui-sref="identity">Back</button>
+	        	<button class="btn btn-fun" translate="etudier.button.back" ui-sref="etudier/identity">Back</button>
 	        	<button type="submit" ng-disabled="addressForm.$invalid || addressForm.$submitted" class="btn btn-fun"
 	        		translate="etudier.button.continue">Continue</button>
        		</div>
