--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,5 +1,5 @@
 <div ng-cloak>
-    <div class="row" has-role="ROLE_USER">
+    <div class="row" has-role="ROLE_USAGER">
     	<div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
         	<box-menu boxtitle="main.usager.title.study" boxlogo="education" ng-click="goTo('usager/etudier')"></box-menu>
         </div>
@@ -27,28 +27,28 @@
     </div>
     <div class="row" has-role="ROLE_AGENT">
     	<div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-        	<box-menu boxtitle="main.agent.title.verify" boxlogo="education"></box-menu>
+        	<box-menu boxtitle="main.agent.title.verify" boxlogo="ok"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.rdv.setting" boxlogo="briefcase" disabled="true"></box-menu>
+	        <box-menu boxtitle="main.agent.title.rdv.setting" boxlogo="calendar" disabled="true"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	     	<box-menu boxtitle="main.agent.title.rdv.preview" boxlogo="home" disabled="true"></box-menu>
+	     	<box-menu boxtitle="main.agent.title.rdv.preview" boxlogo="th-list" disabled="true"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.rdv.drive" boxlogo="eye-open"></box-menu>
+	        <box-menu boxtitle="main.agent.title.rdv.drive" boxlogo="camera"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.decision" boxlogo="flag"></box-menu>
+	        <box-menu boxtitle="main.agent.title.decision" boxlogo="pencil" ng-click="goTo('etudier/validation')"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.question" boxlogo="camera" disabled="true"></box-menu>
+	        <box-menu boxtitle="main.agent.title.question" boxlogo="comment" disabled="true"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.consult" boxlogo="cog" disabled="true"></box-menu>
+	        <box-menu boxtitle="main.agent.title.consult" boxlogo="search" disabled="true"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.analyse" boxlogo="folder-open"></box-menu>
+	        <box-menu boxtitle="main.agent.title.analyse" boxlogo="stats"></box-menu>
         </div>
     </div>
 </div>
