creation page arrivee en france

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -150,6 +150,8 @@
     <script src="scripts/app/account/sessions/sessions.js"></script>
     <script src="scripts/app/account/sessions/sessions.controller.js"></script>
     <script src="scripts/app/usager/usager.js"></script>
+    <script src="scripts/app/usager/address/address.js"></script>
+    <script src="scripts/app/usager/address/address.controller.js"></script>
     <script src="scripts/app/usager/etudier/etudier.js"></script>
     <script src="scripts/app/usager/etudier/etudier.controller.js"></script>
     <script src="scripts/app/usager/etudier/identity/identity.js"></script>
