--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -19,7 +19,7 @@
 	        <box-menu boxtitle="main.usager.title.visit" boxlogo="camera" disabled="true"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.usager.title.user.account" boxlogo="cog" ng-click="goTo('settings')"></box-menu>
+	        <box-menu boxtitle="main.usager.title.user.account" boxlogo="cog" ng-click="goTo('address')"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
 	        <box-menu boxtitle="main.usager.title.follow" boxlogo="folder-open"></box-menu>
