--- a/src/main/webapp/scripts/app/usager/etudier/payment/payment.html
+++ b/src/main/webapp/scripts/app/usager/etudier/payment/payment.html
@@ -96,7 +96,7 @@
                     </div>
                     <br>
                     <div class="row row-center">
-                    	<button type="submit" ng-disabled="paymentForm.$invalid || paymentForm.$submitted" class="btn btn-fun"
+                    	<button type="submit" ng-disabled="paymentForm.$invalid || paymentForm.$submitted" class="btn btn-primary"
 							translate="etudier.button.payment">Payment</button>
                     </div>
                     <div class="row" style="display:none;">
