--- a/src/main/webapp/scripts/app/agent/etudier/validation/validation.html
+++ b/src/main/webapp/scripts/app/agent/etudier/validation/validation.html
@@ -107,8 +107,8 @@
 	<br>
 	<div class="row row-center">
 		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
-	    	<button class="btn btn-fun" translate="etudier.validation.button.decline">Decline</button>
-	    	<button class="btn btn-fun" translate="etudier.validation.button.accept">Accept</button>
+	    	<button class="btn btn-default" translate="etudier.validation.button.decline">Decline</button>
+	    	<button class="btn btn-primary" translate="etudier.validation.button.accept">Accept</button>
 		</div>
 	</div>
 </div>
