--- a/src/main/webapp/scripts/app/usager/address/address.html
+++ b/src/main/webapp/scripts/app/usager/address/address.html
@@ -1,32 +1,46 @@
 <div ng-cloak>
     <div class="row">
     	<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1 title-underscore">
-    		<h4 translate="etudier.title">Request for a student stay</h4>
+    		<h4 translate="address.french.form.title">Request for a student stay</h4>
    		</div>
     </div>
     <br>
-    <steps-menu stepnumber="2"></steps-menu>
-    <br><br>
+    <div class="alert alert-success" ng-show="success" translate="settings.messages.success">
+        <strong>Settings saved!</strong>
+    </div>
+    <br>
 
 	<form name="addressForm" role="form" class="form-horizontal" novalidate ng-submit="save()" show-validation>
 	
-		<div class="row">
-			<div class="col-xs-1 col-xs-offset-1 col-sm-1 col-sm-offset-1 col-md-1 col-md-offset-1 col-lg-1 col-lg-offset-1">
-		    	<span class="step-number-align">
-		    		<div class="step-number step-number-green">2</div>
-		    	</span>
-		    </div>
-		    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 form-title-text">
-		    	<p translate="etudier.address.form.title">Address</p>
-		    </div>
-		</div>
-		<br>
 	    <div class="row">
 			<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
 		        <div class="form-group">
-		            <label translate="etudier.address.form.owner" for="field_owner">Owner</label>
+		            <label translate="address.form.comingDate" for="field_comingDate">ComingDate</label>
+			        <div class="input-group date">
+				        <span class="input-group-addon">
+	                        <span class="fa fa-calendar"></span>
+	                    </span>
+	                    <input type="text" class="form-control"
+					           datetimepicker
+					           datetimepicker-options="{{datePickerOptions}}"
+					           name="comingDateTxt" id="field_comingDateTxt"
+					           ng-model="account.comingDateTxt"
+					           placeholder="{{'global.form.date.format' | translate}}">
+					</div>
+		
+		            <div ng-show="addressForm.comingDateTxt.$dirty && addressForm.comingDateTxt.$invalid">
+		                <p class="help-block" ng-show="addressForm.comingDate.$error.required" translate="entity.validation.required">
+		                    This field is required.
+		                </p>
+		                <p class="help-block" ng-show="addressForm.comingDate.$error.date" translate="entity.validation.datetimelocal">
+		                    This field should be a date.
+		                </p>
+		            </div>
+		        </div>
+		        <div class="form-group">
+		            <label translate="address.form.owner" for="field_owner">Owner</label>
 		            <input type="text" class="form-control" name="owner" id="field_owner"
-		                    ng-model="address.owner">
+		                    ng-model="account.frenchAddress.owner">
 		
 		            <div ng-show="addressForm.owner.$dirty && addressForm.owner.$invalid">
 		                <p class="help-block" ng-show="addressForm.owner.$error.required" translate="entity.validation.required">
@@ -35,8 +49,8 @@
 		            </div>
 		        </div>
 		        <div class="form-group">
-		            <label translate="etudier.address.form.number" for="field_number">Number</label>
-		            <input type="text" class="form-control" name="number" id="field_number" ng-model="address.number" required>
+		            <label translate="address.form.number" for="field_number">Number</label>
+		            <input type="text" class="form-control" name="number" id="field_number" ng-model="account.frenchAddress.number" required>
 		
 		            <div ng-show="addressForm.number.$dirty && addressForm.number.$invalid">
 		                <p class="help-block" ng-show="addressForm.number.$error.required" translate="entity.validation.required">
@@ -45,9 +59,9 @@
 		            </div>
 		        </div>
 		        <div class="form-group">
-		            <label translate="etudier.address.form.street" for="field_street">Street</label>
+		            <label translate="address.form.street" for="field_street">Street</label>
 		            <input type="text" class="form-control" name="street" id="field_street"
-		                    ng-model="address.street" required>
+		                    ng-model="account.frenchAddress.street" required>
 		
 		            <div ng-show="addressForm.street.$dirty && addressForm.street.$invalid">
 		                <p class="help-block" ng-show="addressForm.street.$error.required" translate="entity.validation.required">
@@ -56,15 +70,15 @@
 		            </div>
 		        </div>
 		        <div class="form-group">
-		            <label translate="etudier.address.form.complement" for="field_complement">Complement</label>
+		            <label translate="address.form.complement" for="field_complement">Complement</label>
 		            <input type="text" class="form-control" name="complement" id="field_complement"
-		                    ng-model="address.complement" >
+		                    ng-model="account.frenchAddress.complement" >
 		
 		        </div>
 		        <div class="form-group">
-		            <label translate="etudier.address.form.postalCode" for="field_postalCode">PostalCode</label>
+		            <label translate="address.form.postalCode" for="field_postalCode">PostalCode</label>
 		            <input type="text" class="form-control" name="postalCode" id="field_postalCode"
-		                    ng-model="address.postalCode" required>
+		                    ng-model="account.frenchAddress.postalCode" required>
 		
 		            <div ng-show="addressForm.postalCode.$dirty && addressForm.postalCode.$invalid">
 		                <p class="help-block" ng-show="addressForm.postalCode.$error.required" translate="entity.validation.required">
@@ -73,9 +87,9 @@
 		            </div>
 		        </div>
 		        <div class="form-group">
-		            <label translate="etudier.address.form.city" for="field_city">City</label>
+		            <label translate="address.form.city" for="field_city">City</label>
 		            <input type="text" class="form-control" name="city" id="field_city"
-		                    ng-model="address.city" required>
+		                    ng-model="account.frenchAddress.city" required>
 		
 		            <div ng-show="addressForm.city.$dirty && addressForm.city.$invalid">
 		                <p class="help-block" ng-show="addressForm.city.$error.required" translate="entity.validation.required">
@@ -84,21 +98,9 @@
 		            </div>
 		        </div>
 		        <div class="form-group">
-		            <label translate="etudier.address.form.country" for="field_country">Country</label>
-		            <select class="form-control" name="country" id="field_country"
-					      ng-options="country.key as country.name for country in countries | orderBy:'name'"
-					      ng-model="address.country" required></select>
-		
-		            <div ng-show="addressForm.country.$dirty && addressForm.country.$invalid">
-		                <p class="help-block" ng-show="addressForm.country.$error.required" translate="entity.validation.required">
-		                    This field is required.
-		                </p>
-		            </div>
-		        </div>
-		        <div class="form-group">
-		            <label translate="etudier.address.form.phone" for="field_phone">Phone</label>
+		            <label translate="address.form.phone" for="field_phone">Phone</label>
 		            <input type="text" class="form-control" name="phone" id="field_phone"
-		                    ng-model="address.phone" required>
+		                    ng-model="account.frenchAddress.phone" required>
 		
 		            <div ng-show="addressForm.phone.$dirty && addressForm.phone.$invalid">
 		                <p class="help-block" ng-show="addressForm.phone.$error.required" translate="entity.validation.required">
@@ -107,19 +109,10 @@
 		            </div>
 		        </div>
 		        <div class="form-group">
-		            <label translate="etudier.address.form.email" for="field_email">Email</label>
-		            <input type="text" class="form-control" name="email" id="field_email"
-		                    ng-model="address.email" required>
-		
-		            <div ng-show="addressForm.email.$dirty && addressForm.email.$invalid">
-		                <p class="help-block" ng-show="addressForm.email.$error.required" translate="entity.validation.required">
-		                    This field is required.
-		                </p>
-		            </div>
-		        </div>
-		        <div class="form-group">
-		            <label translate="etudier.address.form.contactType" for="field_contactType">ContactType</label>
-		            <select class="form-control" name="contactType" ng-model="address.contactType" id="field_contactType" required>
+		            <label translate="address.form.contactType" for="field_contactType">ContactType</label>
+		            <select class="form-control" name="contactType" ng-model="account.frenchAddress.contactType" id="field_contactType"
+		            		tabindex="0" data-placement="right" data-toggle="popover" data-trigger="focus" data-content="{{'address.form.contactType.tooltip' | translate}}"
+		            		required>
 		                <option value="email" translate="sejourApp.ContactType.email">email</option>
 		                <option value="sms" translate="sejourApp.ContactType.sms">sms</option>
 		                <option value="postal" translate="sejourApp.ContactType.postal">postal</option>
@@ -136,9 +129,8 @@
 		<br>
 	    <div class="row row-center">
 	    	<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
-	        	<button class="btn btn-default" translate="etudier.button.back" ui-sref="etudier/identity">Back</button>
 	        	<button type="submit" ng-disabled="addressForm.$invalid || addressForm.$submitted" class="btn btn-primary"
-	        		translate="etudier.button.continue">Continue</button>
+	        		translate="address.french.form.button">Continue</button>
        		</div>
         </div>
 	</form>
@@ -146,4 +138,7 @@
     
 <script type="text/javascript">
 	$("html, body").animate({ scrollTop: 0 }, "slow");
+	$(function () {
+		$('#field_contactType').popover();
+	})
 </script>
