--- a/src/main/webapp/scripts/app/usager/etudier/etudier.html
+++ b/src/main/webapp/scripts/app/usager/etudier/etudier.html
@@ -68,6 +68,6 @@
     	</div>
 	</div>
 	<div class="row row-center">
-    	<button class="btn btn-fun" translate="etudier.button.start" ng-click="initRequest()">Start</button>
+    	<button class="btn btn-primary" translate="etudier.button.start" ng-click="initRequest()">Start</button>
 	</div>
 </div>
