--- a/src/main/webapp/scripts/app/usager/etudier/identity/identity.html
+++ b/src/main/webapp/scripts/app/usager/etudier/identity/identity.html
@@ -178,7 +178,7 @@
 		<br>
 	    <div class="row row-center">
 	    	<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
-	       		<button type="submit" ng-disabled="identityForm.$invalid || identityForm.$submitted" class="btn btn-fun"
+	       		<button type="submit" ng-disabled="identityForm.$invalid || identityForm.$submitted" class="btn btn-primary"
 	       			translate="etudier.button.continue">Continue</button>
       		</div>
         </div>
