--- a/src/main/webapp/scripts/app/usager/etudier/project/project.html
+++ b/src/main/webapp/scripts/app/usager/etudier/project/project.html
@@ -195,8 +195,8 @@
 		<br>
 	    <div class="row row-center">
 	    	<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
-	        	<button class="btn btn-fun" translate="etudier.button.back" ui-sref="etudier/address">Back</button>
-	        	<button type="submit" ng-disabled="projectForm.$invalid || projectForm.$submitted" class="btn btn-fun"
+	        	<button class="btn btn-default" translate="etudier.button.back" ui-sref="etudier/address">Back</button>
+	        	<button type="submit" ng-disabled="projectForm.$invalid || projectForm.$submitted" class="btn btn-primary"
 	        		translate="etudier.button.continue">Continue</button>
        		</div>
         </div>
