--- a/src/main/webapp/scripts/app/usager/etudier/summary/summary.html
+++ b/src/main/webapp/scripts/app/usager/etudier/summary/summary.html
@@ -56,7 +56,7 @@
 	<br>
 	<div class="row row-center">
 		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
-	    	<button class="btn btn-fun" ui-sref="home"
+	    	<button class="btn btn-primary" ui-sref="home"
 					translate="etudier.button.end">End</button>
 		</div>
 	</div>
